// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Border Color 1`] = `
Object {
  "borderColor": "currentColor",
}
`;

exports[`Border Color 2`] = `
Object {
  "--w-border-opacity": "1",
  "borderColor": "rgba(255, 255, 255, var(--w-border-opacity))",
}
`;

exports[`Border Color 3`] = `
Object {
  "--w-border-opacity": "1",
  "borderColor": "rgba(29, 78, 216, var(--w-border-opacity))",
}
`;

exports[`Border Color 4`] = `
Object {
  "--w-border-opacity": "1",
  "borderColor": "rgba(239, 68, 68, var(--w-border-opacity))",
}
`;

exports[`Border Opacity 1`] = `
Object {
  "--w-border-opacity": "0",
}
`;

exports[`Border Opacity 2`] = `
Object {
  "--w-border-opacity": "0.5",
}
`;

exports[`Border Opacity 3`] = `
Object {
  "--w-border-opacity": "0.3",
}
`;

exports[`Border Opacity 4`] = `
Object {
  "--w-border-opacity": "1",
}
`;

exports[`Border Opacity With Different Trigger 1`] = `
Object {
  "--w-border-opacity": "0",
}
`;

exports[`Border Opacity With Different Trigger 2`] = `
Object {
  "--w-border-opacity": "0.5",
}
`;

exports[`Border Opacity With Different Trigger 3`] = `
Object {
  "--w-border-opacity": "0.3",
}
`;

exports[`Border Opacity With Different Trigger 4`] = `
Object {
  "--w-border-opacity": "1",
}
`;

exports[`Border Opacity With Proxy Config 1`] = `
Object {
  "--w-border-opacity": "0",
}
`;

exports[`Border Opacity With Proxy Config 2`] = `
Object {
  "--w-border-opacity": "0.5",
}
`;

exports[`Border Opacity With Proxy Config 3`] = `
Object {
  "--w-border-opacity": "0.3",
}
`;

exports[`Border Opacity With Proxy Config 4`] = `
Object {
  "--w-border-opacity": "1",
}
`;

exports[`Border Opacity With Proxy Config 5`] = `
Object {
  "--w-border-opacity": "0.12",
}
`;

exports[`Border Opacity With Proxy Config 6`] = `
Object {
  "--w-border-opacity": "0.7",
}
`;

exports[`Border Radius: 1 1`] = `
Object {
  "borderRadius": "100%",
}
`;

exports[`Border Radius: default 1`] = `
Object {
  "borderRadius": "0.25rem",
}
`;

exports[`Border Radius: full 1`] = `
Object {
  "borderRadius": "9999px",
}
`;

exports[`Border Radius: lg 1`] = `
Object {
  "borderRadius": "0.5rem",
}
`;

exports[`Border Radius: md 1`] = `
Object {
  "borderRadius": "0.375rem",
}
`;

exports[`Border Radius: none 1`] = `
Object {
  "borderRadius": "0px",
}
`;

exports[`Border Radius: sm 1`] = `
Object {
  "borderRadius": "0.125rem",
}
`;

exports[`Border Radius: xl 1`] = `
Object {
  "borderRadius": "0.75rem",
}
`;

exports[`Border Radius: xxl 1`] = `
Object {
  "borderRadius": "1rem",
}
`;

exports[`Border Radius: xxxl 1`] = `
Object {
  "borderRadius": "1.5rem",
}
`;

exports[`Border Style: dashed 1`] = `
Object {
  "borderStyle": "dashed",
}
`;

exports[`Border Style: dotted 1`] = `
Object {
  "borderStyle": "dotted",
}
`;

exports[`Border Style: double 1`] = `
Object {
  "borderStyle": "double",
}
`;

exports[`Border Style: none 1`] = `
Object {
  "borderStyle": "none",
}
`;

exports[`Border Style: solid 1`] = `
Object {
  "borderStyle": "solid",
}
`;

exports[`Border Width 1`] = `
Object {
  "borderWidth": "0px",
}
`;

exports[`Border Width 2`] = `
Object {
  "borderWidth": "4px",
}
`;

exports[`Border Width 3`] = `
Object {
  "borderWidth": "1px",
}
`;

exports[`Border With Nested Config 1`] = `
Object {
  "borderStyle": "nested",
}
`;

exports[`Border With Nested Config 2`] = `
Object {
  "borderStyle": "solid",
}
`;

exports[`Border With Nested Config 3`] = `
Object {
  "borderStyle": "dashed",
}
`;

exports[`Border With Nested Config 4`] = `
Object {
  "borderStyle": "double",
}
`;
